fix icon sizes and alignment

--- a/frontend/src/components/FairbundledHeader/FairbundledHeader.less
+++ b/frontend/src/components/FairbundledHeader/FairbundledHeader.less
@@ -1,5 +1,5 @@
 .header__custom-divider {
-    margin: 5px 0 0 0;
+    margin: 0 0 0 0;
 }
 
 .header__custom-divider-bottom {
@@ -13,5 +13,9 @@
 
 .header__icon-menu{
     width: 100%;
+}
+
+.header__greeting{
+    text-align: right;
 }
 
