--- a/frontend/src/components/LandingPage/LandingCertificates.less
+++ b/frontend/src/components/LandingPage/LandingCertificates.less
@@ -10,8 +10,7 @@
         width: 100%
     }
 
-    .slick-dots {
-        position: absolute;
+    ul.slick-dots {
         z-index: 1;
         button {
             background-color: #78A262 !important;
